# pcmf

./: CMakeLists.txt  README.md  package.xml
geo_map_server/: README.md  app.py  ros_to_flask_node.py
geo_map_server/templates/: index.html
include/pcmf/: genetic_fitting_tools.hpp  gicp_fitting_tools.hpp  pcmf_data_tools.hpp  pcmf_kalman_tools.hpp  pcmf_tools.hpp  ransac_corner_detection.hpp
launch/: hdl_graph_slam_400_pcmf.launch  pcmf.launch  pcmf_bridge.launch
maps/: all_points.npy  all_points1.npy  all_points_brattora.npy  bay_lines_v2.dxf  bay_lines_v2.npy  bay_lines_v3.dxf  bay_lines_v3.npy  bridge_map.dxf  corner_selector.py  hdl_mr_map.pcd  mr_2710.npy  mr_2710_complete.npy  mr_2710_complete_orientations.npy  mr_2710_complete_positions.npy  npy_drag_points.py  path_map.html  reference_map_mr_complete.npy  reference_map_mr_partial.npy  selected_points.npy  selected_points1.npy  selected_points2.npy  selected_points3.npy  selected_points4.npy  selected_points5.npy  selected_points_brattora.npy  trajectory_map.html
marker_detection/: marker_transf.py  vid_marker_triangulate.py  vid_sub_pose_publish.py  video_sub_calc_trans_pub.py
marker_detection/old_scripts/: camera_calib.py  find_camera_index.py  marker_avg_inverse_pose.py  marker_intersection_circles_node.py  marker_inverse_node.py  marker_node.py  marker_node_arrow_poses.py  marker_node_camera_pose.py  marker_origin_circle.py  marker_origin_dist.py  marker_xy_dist.py  pose_kalman_filter.py  simple_video_frames_sub.py  video_sub_camera_path_pub.py  video_sub_plot_camera.py  video_sub_pnp_plot_markers.py  video_sub_simple_inverse_pub.py
plot_scripts/: eval_data.csv  eval_data_2024-04-05-13-16-20.bag_low_tide.csv  eval_data_2024-04-12-14-26-20.bag -s 30 mid tide.csv  eval_data_2024-04-12-14-35-21.bag -s 60 mid_tide.csv  eval_data_2024-04-12-14-35-21_s50.csv  eval_data_2024-04-12-15-04-39.bag -s 30 high tide.csv  eval_data_2024-04-25-13-43-12.bag -s 60.csv  eval_data_bridge_aruco_1.csv  pos_general_plotter.ipynb  pos_plotter.py  topic_logger_to_csv.py  transformation_distribution_plotter.py  transformations_plotter.py
plot_scripts/eval_data_old/: eval_data.csv  eval_data_2024-04-12-14-26-20.bag -s 20.csv  eval_data_2024-04-12-14-35-21.bag -s 50.csv  eval_data_2024-04-12-15-04-39.bag -s 30.csv  eval_data_2024-04-12-15-04-39.csv  eval_data_2024-04-12-15-04-39_ekf_false.csv
ros_slam_tools/: save_map_and_path_npy.py  slam_pose_plotter.py
scripts/: bag_player.py  bridge_gps_to_local_frame.py  corner_heatmap_node.py  csv_data_plotter.py  dead_reckoning_node copy.py  dead_reckoning_node.py  dummy_gps_publisher.py  dxf_map_publisher.py  ekf_transformation_plotter.py  geo_plotter_node.py  gps_slam_error_plotter.py  gps_to_local_frame.py  npy_map_publisher.py  predef_map_publisher.py  predef_map_publisher_brattora.py
slam_tools/: corner_detection_eigenvecs.py  cv2_corner detection.py  dxf_to_npy_map generator.py  geo_map_plotter.py  npy_to_pcd.py  pcd_to_npy_voxel.py  pcd_visualizer_o3d.py  pcd_visualizer_plt.py  pcmf_icp.ipynb  pcmf_icp_npy.py  pcmf_icp_pcd.py  ransac_line_detector.py  remove_curved_points.py
src/: anchor_pivot_node copy.cpp  anchor_pivot_node.cpp  map_processing_node.cpp
src/old_src/: anchor_corner_pcmf_working.cpp  anchor_pivot_node copy.cpp  eigen_cells_corner_detection_notworking.cpp  harris_example.cpp  icp_harris_working.cpp  icp_pcmf_node.cpp  icp_pcmf_node_backup.cpp  icp_pcmf_node_w_harris_corners.cpp  surface_reconstruction.cpp
